# FAIS-AppliedComputerScience-2019-2022

./: CMakeLists.txt  README.md
AlgorithmsAndDataStructures/: CMakeLists.txt
AlgorithmsAndDataStructures/AlgorithmsDataImplementation/: BinarySearch.cpp  DoublyList.cpp  Fibonacci.cpp  From8To10.cpp  Hanoi.cpp  List.cpp  PriorityQueue.cpp  Queue.cpp  QueueArray.cpp  Recursion.cpp  Set.cpp  Stack.cpp  StackArray.cpp  heapsort.cpp  quickSort.cpp
AlgorithmsAndDataStructures/InterestingTask/: Jasio.cpp  Smugglers.cpp
AlgorithmsAndDataStructures/KruskalMazeImplementation/: Edge.java  KruskalMaze.java  Main.java  Tree.java  Zastosowanie algorytmów grafowych do generacji labiryntów (2).docx
AlgorithmsAndDataStructures/ReversePolishNotation/: RPN.cpp
ComputerGraphic/PostScript/: BezierCurves.ps  CapsAndJoins.ps  ColorWheel.ps  PatternText.ps  PentaStar.ps  Squares.ps  TextFrame.ps  Triangle.ps
ComputerGraphic/PythonScripts_Gimp/: Animation_ProgressBar.py  Animation_ScrollingText.py  Modify_IMG_1.py  Modify_IMG_1b.py  Modify_IMG_2_Gamma.py  Modify_IMG_2b_Gamma.py  Modify_IMG_3_Flip.py  Modify_IMG_3b_Caption.py  Modify_IMG_3b_Flip.py  utils.py
DataVisualization/: data.ipynb
DataVisualization/src/: format.sty  readme.md
Databases/Class/: university_database.sql
Databases/Project/: cinema_booking.sql  cinema_functions.sql
Databases/Test/: book_procedures.sql  book_rental.sql
IntroductionToDataScience/: Task1.ipynb
IntroductionToDataScience/Assignment-2/: Task2.ipynb
IntroductionToDataScience/Assignment-2_optional/: Task2_optional.ipynb
(+129 files in other folders)
